--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -11,6 +11,7 @@
       padding-left: ($euiCheckBoxSize * 1.5);
       line-height: $euiSizeL;
       font-size: $euiFontSizeS;
+      min-height: $euiFontSizeS; // In case the label is just white space
       position: relative;
       z-index: 2;
       cursor: pointer;
