--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -137,6 +137,7 @@
 
     .euiCheckbox__label {
       font-size: fontSizeToRemOrEm($baseFontSize, $sizingMethod);
+      min-height: fontSizeToRemOrEm($baseFontSize, $sizingMethod); // In case the label is just white space
       padding-left: marginToRemOrEm($baseLineHeightMultiplier * 3, $baseFontSize, $sizingMethod);
       line-height: $baseLineHeightMultiplier * 3 / $baseFontSize;
     }
