--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -139,7 +139,7 @@
       font-size: fontSizeToRemOrEm($baseFontSize, $sizingMethod);
       min-height: fontSizeToRemOrEm($baseFontSize, $sizingMethod); // In case the label is just white space
       padding-left: marginToRemOrEm($baseLineHeightMultiplier * 3, $baseFontSize, $sizingMethod);
-      line-height: $baseLineHeightMultiplier * 3 / $baseFontSize;
+      line-height: $euiCheckBoxSize;
     }
 
     .euiCheckbox + *:not(.euiCheckbox) {
