--- a/src/components/datagrid/controls/_data_grid_display.scss
+++ b/src/components/datagrid/controls/_data_grid_display.scss
@@ -1,3 +1,3 @@
-.euiDataGrid__displayFormRow {
-  width: $euiFormMaxWidth;
+.euiDataGrid__stylePopoverPanel {
+  width: $euiFormMaxWidth + $euiSize;
 }
