--- a/src/components/datagrid/controls/_data_grid_toolbar.scss
+++ b/src/components/datagrid/controls/_data_grid_toolbar.scss
@@ -3,7 +3,7 @@
   position: relative;
   z-index: 3; // Needs to sit above the content blow that sits below it
   border: $euiBorderThin;
-  padding: $euiSizeXS;
+  padding: $euiSizeXS $euiSizeXS $euiSizeXS 0;
   display: flex;
   justify-content: space-between;
 }
@@ -28,18 +28,9 @@
   }
 }
 
-.euiDataGrid__controlBtn {
-  border-radius: $euiBorderRadius;
-
-  &:focus {
-    background: shadeOrTint($euiColorLightestShade, 10%, 10%);
-  }
-}
-
 .euiDataGrid__controlBtn--active,
 .euiDataGrid__controlBtn--active:focus {
   font-weight: $euiFontWeightSemiBold;
-  color: $euiColorFullShade;
 }
 
 @include euiDataGridStyles(bordersNone) {
